src/test/deca/syntax/valid/created/minus.deca
{
	int a = -5;
	float b = -22.2;
}
