src/test/deca/syntax/invalid/created/faux4.deca
{
	int a = 4.4232;
}
